# flutter-dev-unixsock

./: .gitignore  CHANGELOG.md  LICENSE  README.md  pubspec.yaml
android/: build.gradle  settings.gradle
example/: .metadata  README.md  pubspec.yaml  unixsock_example.dart
example/android/app/: build.gradle.kts
example/android/app/src/main/: AndroidManifest.xml
example/android/app/src/main/kotlin/com/example/unixsock_example/: MainActivity.kt
example/ios/Runner/: Info.plist
example/ios/Runner.xcodeproj/: project.pbxproj
example/lib/: main.dart
example/linux/: CMakeLists.txt
example/linux/flutter/: generated_plugins.cmake
example/linux/runner/: my_application.cc
example/macos/Runner.xcodeproj/: project.pbxproj
example/macos/Runner.xcodeproj/xcshareddata/xcschemes/: Runner.xcscheme
example/macos/Runner/Configs/: AppInfo.xcconfig
example/test/: unixsock_example_test.dart  widget_test.dart
ios/: unixsock.podspec
ios/Classes/: unixsock.c
lib/: unixsock.dart
lib/src/: rust_backend.dart  rust_security_context.dart  rust_socket.dart  unix_socket.dart
linux/: CMakeLists.txt
macos/: unixsock.podspec
rust/: Cargo.toml  README.md
rust/src/: lib.rs
src/: CMakeLists.txt  unixsock.c  unixsock.h
test/: unixsock_test.dart
