[package]
name = "unixsock_rust"
version = "0.1.0"
edition = "2021"

[lib]
name = "unixsock_rust"
crate-type = ["cdylib"]

[dependencies]
once_cell = "1.21.3"
tokio = { version = "1.48.0", features = ["rt-multi-thread", "net", "time", "io-util", "sync", "macros"] }
tokio-rustls = "0.26.2"
rustls = { version = "0.23.35", default-features = false, features = ["std", "tls12", "ring"] }
rustls-pemfile = "2.2.0"
webpki-roots = "0.26.8"
